array.island.Island.scala.error
Compilation error:
Island:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    match position
    ^Island:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case(<x && num(position)>actuel) => islandRecursif(nume,x,(compteur+1),num(position),(position+1))
    ^Island:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case (<x && num(position)<actuel) => islandRecursif(nume,x,compteur,num(position),(position+1))
    ^Island:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case >x => return compteur
    ^